// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmartStat container should render properly as a round design 1`] = `
preact-render-spy (1 nodes)
-------
<div class="smartStat round">
  <button
    class="button"
    onClick={[Function anonymous]}
    aria-label="agility: Select active effects"
  >
    <span class="buttonFocusIndicator"></span>
  </button>
  <div class="stat">
    <div class="stat round">
      <div>7</div>
      <div class="label"></div>
    </div>
  </div>
  <div
    class="effects"
    style="width: 0px;"
  >
    <div class="list">
      <EffectToggle
        effect={
          Object {
            "active": true,
            "id": "1",
            "name": "Effect 1",
            "target": Array [
              "attributes",
              "agility"
            ],
            "value": 1,
            Symbol(mobx administration): ObservableObjectAdministration$$1 {
              "defaultEnhancer": [Function deepEnhancer$$1],
              "keysAtom": Atom$$1 {
                "diffValue": 0,
                "isBeingObserved": false,
                "isPendingUnobservation": false,
                "lastAccessedBy": 0,
                "lowestObserverState": 2,
                "name": "ActiveCharacterStore@1.effects[..].keys",
                "observers": Set {}
              },
              "name": "ActiveCharacterStore@1.effects[..]",
              "pendingKeys": Map {
                "toJSON" => false,
                "nodeName" => false
              },
              "proxy": [Circular],
              "target": Object {
                "active": true,
                "id": "1",
                "name": "Effect 1",
                "target": Array [
                  "attributes",
                  "agility"
                ],
                "value": 1,
                Symbol(mobx administration): [Circular]
              },
              "values": Map {
                "name" => "Effect 1",
                "id" => "1",
                "value" => 1,
                "active" => true,
                "target" => Array [
                  "attributes",
                  "agility"
                ]
              }
            }
          }
        }
        toggleHandler={[Function anonymous]}
      >
      </EffectToggle>
    </div>
    <div
      class="editButton"
      style="margin-left: calc(undefinedpx + 2rem);"
    >
      edit stat...
    </div>
  </div>
</div>

`;

exports[`SmartStat container when rendering should show the correct attribute value 1`] = `
preact-render-spy (1 nodes)
-------
<div class="smartStat">
  <button
    class="button"
    onClick={[Function anonymous]}
    aria-label="agility: Select active effects"
  >
    <span class="buttonFocusIndicator"></span>
  </button>
  <div class="stat">
    <div class="stat">
      <div class="label"></div>
      <div>7</div>
    </div>
  </div>
  <div
    class="effects"
    style="width: 0px;"
  >
    <div class="list">
      <EffectToggle
        effect={
          Object {
            "active": true,
            "id": "1",
            "name": "Effect 1",
            "target": Array [
              "attributes",
              "agility"
            ],
            "value": 1,
            Symbol(mobx administration): ObservableObjectAdministration$$1 {
              "defaultEnhancer": [Function deepEnhancer$$1],
              "keysAtom": Atom$$1 {
                "diffValue": 0,
                "isBeingObserved": false,
                "isPendingUnobservation": false,
                "lastAccessedBy": 0,
                "lowestObserverState": 2,
                "name": "ActiveCharacterStore@1.effects[..].keys",
                "observers": Set {}
              },
              "name": "ActiveCharacterStore@1.effects[..]",
              "pendingKeys": Map {
                "toJSON" => false,
                "nodeName" => false
              },
              "proxy": [Circular],
              "target": Object {
                "active": true,
                "id": "1",
                "name": "Effect 1",
                "target": Array [
                  "attributes",
                  "agility"
                ],
                "value": 1,
                Symbol(mobx administration): [Circular]
              },
              "values": Map {
                "name" => "Effect 1",
                "id" => "1",
                "value" => 1,
                "active" => true,
                "target" => Array [
                  "attributes",
                  "agility"
                ]
              }
            }
          }
        }
        toggleHandler={[Function anonymous]}
      >
      </EffectToggle>
    </div>
    <div
      class="editButton"
      style="margin-left: calc(undefinedpx + 2rem);"
    >
      edit stat...
    </div>
  </div>
</div>

`;
